Revise README for clarity and feature listing
Updated the README to clarify application features and usage instructions.